# plaid

./: plaid.cabal  stack.yaml
src/Plaid/: Connect.hs  Data.hs
src/Plaid/Data/: ConnectResponse.hs  Creds.hs
test/: TestImport.hs
test/Plaid/: ConnectSpec.hs
