name:                plaid
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jsteiner/plaid#readme
license:             BSD3
license-file:        LICENSE
author:              Josh Steiner
maintainer:          josh@jsteiner.me
copyright:           2016 Josh Steiner
category:            Finance
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Plaid.Connect
                     , Plaid.Data
                     , Plaid.Data.Creds
                     , Plaid.Data.ConnectResponse
  build-depends:       base >= 4.7 && < 5
                     , wreq >= 0.4.1.0
                     , text
                     , lens
                     , aeson
                     , time
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  ghc-options:         -Wall -Werror

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , plaid
                     , hspec
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/jsteiner/plaid
